# sol-x404

./: CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  unit_test.sh  x404.md
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml  main.yml
clients/js/: CONTRIBUTING.md  README.md  package.json
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: sol_x404_program.json
programs/x404/: Cargo.toml  README.md
programs/x404/src/: common.rs  entrypoint.rs  error.rs  instruction.rs  instructions.rs  lib.rs  processor.rs  state.rs  utils.rs
programs/x404/tests/: intergration.rs
programs/x404_hook/: Cargo.toml
programs/x404_hook/src/: lib.rs
tests/: Cargo.toml  intergration.rs
