[package]
name = "x404"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "0.3.0"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "=1.17.25"
spl-token = "4.0.0"
mpl-token-metadata = "4.1.2"
thiserror = "^1.0"
anchor-lang = "0.29.0"