[package]
name = "x404"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "^0.3.0"
num-derive = "^0.3"
num-traits = "^0.2"
thiserror = "^1.0"
anchor-lang = {version="0.29.0", features=["init-if-needed"]}
anchor-spl = {version="0.29.0", features=["token_2022","metadata"]}
solana-program = "=1.18.5"

[dev-dependencies]
solana-program-test = "=1.18.5"
solana-sdk = "=1.18.5"
rand = "^0.8.5"