[package]
name = "x404"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "^0.3.0"
num-derive = "^0.3"
num-traits = "^0.2"
thiserror = "^1.0"
anchor-lang = {version="0.29.0", default-features = false, features=["derive","init-if-needed"]}
anchor-spl = {version="0.29.0", features=["token_2022"]}
solana-program = "=1.18.5"
bytemuck = "1.15.0"

[features]
default = []
no-entrypoint = []