[package]
name = "x404_hook"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "^0.3.0"
num-derive = "^0.3"
num-traits = "^0.2"
thiserror = "^1.0"
anchor-lang = {version="0.29.0"}
anchor-spl = {version="0.29.0", features=["token_2022"]}
solana-program = "=1.18.5"
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"
x404= {path="../x404",features=["no-entrypoint"]}

